create oracle environment variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=system
-spring.datasource.password=oracle
+spring.datasource.url=jdbc:oracle:thin:@${ORACLE_DATABASE_HOST}:${ORACLE_DATABASE_PORT}:${ORACLE_DATABASE_NAME}
+spring.datasource.username=${ORACLE_DATABASE_USER}
+spring.datasource.password=${ORACLE_DATABASE_PASS}
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 spring.jpa.hibernate.ddl-auto=none
